syntax = "proto3";

package proto;

option go_package = "jetshop_proto/";

message HermesChannelCredential {
  string channel_code = 1;
  string platform_code = 2;
  bool is_enabled = 3;
  string seller_id = 4;
}

message ChannelListHermesCredentialRequest {
  bool is_enabled = 1;
}

message ChannelListHermesCredentialResponse {
  repeated HermesChannelCredential creds = 1;
}

message ChannelGetHermesCredentialRequest {
  string channel_code = 1;
}

message ChannelGetHermesCredentialResponse {
  HermesChannelCredential cred = 1;
}

service ChannelService {
  rpc ListHermesChannelCredential(ChannelListHermesCredentialRequest) returns (ChannelListHermesCredentialResponse) {};
  rpc GetHermesChannelCredential(ChannelGetHermesCredentialRequest) returns (ChannelGetHermesCredentialResponse) {};
}
